fix light and dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,7 @@
   scroll-behavior: smooth;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: blue) {
   :root {
     --input: #171717;
     --background: #212121;
